# learn-humanoid-robotics

./: .env.example  .eslintignore  .gitignore  .npmignore  .prettierignore  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  README.md
.claude/: settings.local.json
.claude-code-router/: config.json
.claude/commands/: sp.clarify.md
.gemini/: setting.json
.github/workflows/: deploy-book.yml  ingest.yml
.specify/memory/: constitution.md
book/: .eslintrc.json  .nojekyll  docusaurus.config.js  package-lock.json  package.json  sidebars.js
book/docs/appendix/: glossary.md  hardware.md
book/docs/capstone/: intro.md
book/docs/conversational-robotics/: intro.md  week13.md
book/docs/digital-twin/: intro.md  week6.md  week7.md
book/docs/foundations/: intro.md  week1.md  week2.md
book/docs/humanoid-dev/: intro.md  week11.md  week12.md
book/docs/isaac/: intro.md  week10.md  week8.md  week9.md
infra/: README.md  schema.sql  setup_db.py  setup_qdrant.py
rag-api/: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt  settings.py
rag-api/app/: main.py
rag-api/ingestion/: chunker.py  pipeline.py
rag-api/models/: rag_models.py
rag-api/routers/: highlight_router.py  ingest_router.py  query_router.py  webhook_router.py
rag-api/services/: embedding.py  llm.py  qdrant_client.py
rag-api/utils/: markdown_reader.py
scripts/: doc_parser.py  embedder.py  index_docs.py  requirements.txt
specs/001-physical-ai-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-backend-implementation/: plan.md  spec.md  tasks.md
(+24 files in other folders)
